@@ -3,6 +3,7 @@ package org.example.entities;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
+import lombok.extern.log4j.Log4j2;
 import org.example.utils.RandomGenerator;
 
 import java.io.FileReader;
@@ -15,9 +16,10 @@ import static org.example.entities.Direction.*;
 @Getter
 @Setter
 @ToString
+@Log4j2
 public class Lift {
-    private static final int MIN_NUMBER_OF_FLOORS = 1;//5
-    private static final int MAX_NUMBER_OF_FLOORS = 4;//20
+    private static final int MIN_NUMBER_OF_FLOORS = 5;//5
+    private static final int MAX_NUMBER_OF_FLOORS = 7;//20
     private static final int LIFT_CAPACITY = 5;
     private static final int MAX_INIT_NUMBER_ON_A_FLOOR = 5;//10
 
@@ -39,15 +41,16 @@ public class Lift {
             List<Passenger> passengers = new ArrayList<>();
             int currentNumberOfPassengers = RandomGenerator.generateNonNegativeInt(MAX_INIT_NUMBER_ON_A_FLOOR);
             for (int j = 0; j < currentNumberOfPassengers; j++) {
-                int nextFloorForPassenger = RandomGenerator.generateIntExceptingValues(MAX_NUMBER_OF_FLOORS, Set.of(floor));
+                int nextFloorForPassenger = RandomGenerator.generatePositiveIntExceptingValues(numberOfFloors, Set.of(floor));
                 passengers.add(new Passenger(nextFloorForPassenger));
             }
             this.floors.add(Floor.of(passengers));
         }
+        log.info("created new Lift instance");
     }
 
-    public Lift(String path){
-        try(FileReader fr = new FileReader(path)){
+    public Lift(String path) {
+        try (FileReader fr = new FileReader(path)) {
             Scanner scanner = new Scanner(fr);
             this.numberOfFloors = scanner.nextInt();
             this.direction = UP;
@@ -63,15 +66,16 @@ public class Lift {
                 this.floors.add(Floor.of(passengers));
             }
             Collections.reverse(floors);
-        } catch (IOException e){
-            System.out.println("io exception caused:(");
+            log.info("created new Lift instance");
+        } catch (IOException e) {
+            log.error("creating of list entity was unsuccessful <= IOException caused <= {}", e.getMessage());
+            System.exit(1337);
         }
     }
 
     public void makeStep() {
-
+        log.info("new step has been made");
         if (direction == UP && isLast(currentFloor)) {
-            System.out.println("///////////////////////////////");
             direction = DOWN;
             dropOff();
             aboard();
@@ -96,11 +100,12 @@ public class Lift {
     }
 
     private void performOneLift() {
+        log.info("current floor of the lift is changed");
         currentFloor += direction.getStep();
     }
 
     private void aboard() {
-        Floor floor = floors.get(currentFloor-1);
+        Floor floor = floors.get(currentFloor - 1);
         List<Passenger> passengersToAboard = floor
                 .getPassengers()
                 .stream().filter(passenger -> {
@@ -109,9 +114,8 @@ public class Lift {
                             : passenger.getFloorTo() < currentFloor;
                 })
                 .limit(LIFT_CAPACITY - liftState.size())
-                .toList();
-//        System.out.println("<<<< aboard");
-//        System.out.println("passengersToAboard = " + passengersToAboard);
+                .collect(Collectors.toList());
+
         for (Passenger p : passengersToAboard) {
             floor.removePassenger(p);
             liftState.add(p);
@@ -123,7 +127,8 @@ public class Lift {
 //        System.out.println("currentFloor = " + currentFloor);
         List<Passenger> droppedOff = liftState.stream()
                 .filter(passenger -> passenger.getFloorTo() == currentFloor)
-                .toList();
+                .collect(Collectors.toList());
+
 //        System.out.println("dropped off = " + droppedOff);
         liftState = liftState.stream()
                 .filter(passenger -> !droppedOff.contains(passenger))
@@ -131,16 +136,16 @@ public class Lift {
 //        System.out.println("liftState2 : " + liftState);
 //        System.out.println("----------------");
         droppedOff.forEach(passenger -> {
-            //Set<Integer> set = Set.of(passenger.getFloorTo());
-            //int newNextFloor = RandomGenerator.generateIntExceptingValues(MAX_NUMBER_OF_FLOORS, set);
-            //passenger.setFloorTo(newNextFloor);
-            floors.get(currentFloor-1).addPassenger(passenger);
+            Set<Integer> set = Set.of(passenger.getFloorTo());
+            int newNextFloor = RandomGenerator.generatePositiveIntExceptingValues(this.numberOfFloors, set);
+            passenger.setFloorTo(newNextFloor);
+            floors.get(currentFloor - 1).addPassenger(passenger);
         });
     }
 
     private boolean isFinishFloor() {
         if (liftState.size() > 0) {
-            if(direction == UP){
+            if (direction == UP) {
                 return currentFloor == liftState.stream().max(Comparator.comparingInt(Passenger::getFloorTo)).get().getFloorTo();
             }
             return currentFloor == liftState.stream().min(Comparator.comparingInt(Passenger::getFloorTo)).get().getFloorTo();
@@ -160,28 +165,28 @@ public class Lift {
     public static Lift getInstance() {
         if (lift == null) {
             int floors = RandomGenerator.generateNonNegativeIntInRange(MIN_NUMBER_OF_FLOORS, MAX_NUMBER_OF_FLOORS);
-            return new Lift(floors);
+            lift = new Lift(floors);
+            log.info("initialized new Lift instance (with random data)");
+            return lift;
         }
+        log.info("used an old Lift instance (with random data)");
         return lift;
     }
 
+
+    /*
+     *
+     * Is used for testing
+     * */
     public static Lift getInstance(String path) {
         if (lift == null) {
             lift = new Lift(path);
+            log.info("used an old Lift instance(from file)");
             return lift;
         }
+        log.info("used an old Lift instance (from a file)");
         return lift;
     }
 
-    public void print(){
-        System.out.println("currentFloor: " + lift.getCurrentFloor());
-        System.out.println("lift state: " + lift.getLiftState());
-        System.out.println("direction: " + direction.name());
-        int cnt = 0;
-        for (Floor floor : lift.getFloors()) {
-            System.out.println(++cnt +" == " + floor);
-        }
-        System.out.println("*************************************");
-    }
 
 }
